[FIX] Contrast issue for highlighted forum posts in dark mode --- * [FIX]Contrast issue for highlighted forum posts in dark mode
See merge request tikiwiki/tiki!6108

--- a/themes/darkly/css/darkly.scss
+++ b/themes/darkly/css/darkly.scss
@@ -35,3 +35,7 @@
     margin-top: .5rem;
     margin-bottom: .5rem;
 }
+
+.card-body {
+    background-color: var(--bs-secondary-bg)!important;
+}
